src/styles/header.module.scss
.navbar {
    position: fixed;
    width: 100%;
    a {
        text-decoration: none;
    }
    nav {
        display: flex;
        align-items: center;
        justify-content: space-around;
        background: #85C5B9;
        height: 60px;
    }
}

@media screen and (min-width: 992px) {
    .btn_animate {
      display: none;
    }
}

@media screen and (max-width: 992px) {
    .navbar nav {
        justify-content: flex-start;
    }
    .navbar .logo {
        width: 100%;
        display: flex;
        justify-content: center;
    }
}

.collapsed {
    display: flex;
    list-style: none;
    a {
        color: #FFFFFF;
    }
    @media screen and (max-width: 992px) {
        display: none;
    }
}

.nav_collapsed {
    display: flex;
    flex-direction: column;
    position: absolute;
    width: 100%;
    
    li:not(:first-child) {
      border-top: 1px solid #e9e9e9;
    }
  
    li {
      padding: 12px 20px;
      color: #777777;
      font-size: 13px;
      font-weight: 600;
      text-transform: uppercase;
      letter-spacing: 1px;
      white-space: nowrap;
    }
  
    ul {
      list-style: none;
      margin: 0;
      padding: 0;
      height: 100vh;
    }
  
    .nav_content {
      background: #ffffff;
      margin: 0 40px;
      border-top: 1px solid #e9e9e9;
      border-bottom: 1px solid #e9e9e9;
    }
  
    @media screen and (min-width: 992px) {
      display: none;
    }
}

.cart_content {
    display: flex;
    img {
        margin-left: 20px;
    }
}

